# long_tern_care

./: .env.backup  .gitignore  README.md  Spacefile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
envs/: .env.local
long_tern_care/: asgi.py  settings.py  urls.py  wsgi.py
long_tern_care_api/: apps.py  models.py  serializers.py  views.py
long_tern_care_api/migrations/: 0001_initial.py  0002_remove_user_name_user_is_active_user_is_staff_and_more.py
ltcs/: manage.py
ltcs/accounts/: models.py  serializers.py  views.py
ltcs/accounts/migrations/: 0001_initial.py
ltcs/ltcs/: asgi.py  settings.py  urls.py  wsgi.py
