[tool.poetry]
name = "ccm-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
django = "~4.1"
djangorestframework = "~3.14"
environs = "~9.5"
psycopg2-binary = "~2.9"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = "^0.26.2"
django-filter = "^23.2"
requests = "^2.30.0"
django-environ = "^0.10.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
autopep8 = "~2.0"
flake8 = "~5.0"
flake8-awesome = "~1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
